--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
 </head>
+
 <body>
     <h1>Welcome to Robin's Component Library</h1>
+    <p>
+        <strong>Robin Hooda</strong> is attending neog.camp and is currently completing levelZero one weekend and
+        assignment at a time.
+    </p>
+    <p>
+        This is a component library created by her to better design each element.
+    </p>
+    <p>
+        After creating this library, I am going to use the components in my <strong>portfolio, blog and all
+            projects</strong> created.
+        This will ensure that all my projects have <strong>consistent themeing and styling.</strong>
+    </p>
+
 </body>
+
 </html>
