Added. typography section

--- a/index.html
+++ b/index.html
@@ -8,19 +8,38 @@
 </head>
 
 <body>
+    <!-- Intro to component library -->
     <h1>Welcome to Robin's Component Library</h1>
     <p>
         <strong>Robin Hooda</strong> is attending neog.camp and is currently completing levelZero one weekend and
         assignment at a time.
     </p>
     <p>
-        This is a component library created by her to better design each element.
+        This is a component library created by Robin to better design each element.
     </p>
     <p>
         After creating this library, I am going to use the components in my <strong>portfolio, blog and all
-            projects</strong> created.
-        This will ensure that all my projects have <strong>consistent themeing and styling.</strong>
+        projects</strong> created.This will ensure that all my projects have <strong>consistent themeing and styling.</strong>
     </p>
+    <hr>
+
+    <h2>@typography</h2>
+    <h1>The biggest heading h1</h1>
+    <h2>The second biggest heading h2</h2>
+    This is normal text. Long running text would look like this on your website. This will auto fold based on the width
+    <small>This is relatively smaller text</small>
+
+    <h2>@containers</h2>
+    <h3>@fluid container</h3>
+    <div>
+        This is going to be a fluid container. It will go full width of divage. With some margin.
+    </div>
+    <h3>@center container</h3>
+    <div>
+        This is going to be a center container. It will go till a given width and center content.
+    </div>
+
+
 
 </body>
 
