--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <!-- Intro to component library -->
+
     <h1>Welcome to Robin's Component Library</h1>
     <p>
         <strong>Robin Hooda</strong> is attending neog.camp and is currently completing levelZero one weekend and
@@ -19,9 +20,12 @@
     </p>
     <p>
         After creating this library, I am going to use the components in my <strong>portfolio, blog and all
-        projects</strong> created.This will ensure that all my projects have <strong>consistent themeing and styling.</strong>
+            projects</strong> created.This will ensure that all my projects have <strong>consistent themeing and
+            styling.</strong>
     </p>
     <hr>
+
+    <!-- typography section -->
 
     <h2>@typography</h2>
     <h1>The biggest heading h1</h1>
