--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         This is going to be a center container. It will go till a given width and center content.
     </div>
 
+    <hr>
+
+    <!-- link section  -->
+    
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a>
+
 
 
 </body>
