--- a/index.html
+++ b/index.html
@@ -46,10 +46,39 @@
     <hr>
 
     <!-- link section  -->
-    
+
     <a href="/">Primary Link</a>
     <a href="/">Secondary Link</a>
 
+    <!-- list section -->
+    <h2>@lists</h2>
+
+    <h3>Unordered lists</h3>
+    <div>We don't want to show bullets in the unordered list. We'll remove that with CSS.</div>
+    <ul>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ul>
+
+    <h3>Inline lists</h3>
+    <div>Instead of going in a new row, we will create a list which will take columns. </div>
+    <ul>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ul>
+
+    <h3>reverse ordered lists</h3>
+    <div>Counting of will go reverse for this list</div>
+
+    <!-- here reversed is used with ol to reverse the item list numbering -->
+    <ol reversed>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ol reversed>
+    <hr>
 
 
 </body>
