--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
 
     <!-- link section  -->
 
+    <h2>@links</h2>
     <a href="/">Primary Link</a>
     <a href="/">Secondary Link</a>
+    <hr>
 
     <!-- list section -->
     <h2>@lists</h2>
