--- a/index.html
+++ b/index.html
@@ -84,6 +84,25 @@
     </ol reversed>
     <hr>
 
+    <!-- navigation bar -->
+    <h2>@nav</h2>
+    Navigation is used on the top of the page and used to get to different pages
+
+    <nav>
+        <div>theBrandName</div>
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/">Products</a>
+            </li>
+            <li>
+                <a href="/">About</a>
+            </li>
+        </ul>
+    </nav>
+    <hr>
 
 </body>
 
