--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
     </nav>
     <hr>
 
+    <!-- header section  -->
+    <h2>@header</h2>
+
+    <header>
+        <img src="images/hero.svg" alt="hero-image">
+        <h1>this is heading h1 inside header</h1>
+    </header>
 </body>
 
 </html>
