--- a/index.html
+++ b/index.html
@@ -111,6 +111,26 @@
         <img src="images/hero.svg" alt="hero-image">
         <h1>this is heading h1 inside header</h1>
     </header>
+    <hr>
+
+    <!-- About section  -->
+    <h2>@Section</h2>
+    A section is used to separate parts of pages. In marketing websites you would have seen a header followed by
+    sections of features, team, pricing, contact info etc.
+
+    <h3>@normal section</h3>
+    <section>
+        <h2>heading inside section</h2>
+        Text defining this section and many more things <br>
+        <a href="/">Primary Button</a>
+    </section>
+    <h3>@an off white section</h3>
+    <section>
+        <h2>inside off white section</h2>
+        Text defining this section and many more things <br>
+        <a href="/">Primary Button</a>
+    </section>
+    <hr>
 </body>
 
 </html>
