--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
         <a href="/">Primary Button</a>
     </section>
     <hr>
+
+    <!-- footer section  -->
+
+    <footer>
+        <h2>@footer</h2>
+        <section>
+            <h2>header inside footer</h2>
+            <ul>
+                <li><a href="/">socialone</a> </li>
+                <li><a href="/">socialtwo</a> </li>
+                <li><a href="/">socialthree</a> </li>
+            </ul>
+        </section>
+    </footer>
 </body>
 
 </html>
