style: links and containers

--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
     <h2>@typography</h2>
     <h1>The biggest heading h1</h1>
     <h2>The second biggest heading h2</h2>
-    This is normal text. Long running text would look like this on your website. This will auto fold based on the width
+    <p> This is normal text. Long running text would look like this on your website. This will auto fold based on the width</p>
     <small>This is relatively smaller text</small>
+    <hr>
+
+    <!-- container section  -->
 
     <h2>@containers</h2>
     <h3>@fluid container</h3>
-    <div>
+    <div class="container">
         This is going to be a fluid container. It will go full width of divage. With some margin.
     </div>
     <h3>@center container</h3>
-    <div>
+    <div class="container container-center">
         This is going to be a center container. It will go till a given width and center content.
     </div>
 
@@ -50,8 +53,8 @@
     <!-- link section  -->
 
     <h2>@links</h2>
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="links primary-button" href="/">Primary Link</a>
+    <a class="links secondary-button" href="/">Secondary Link</a>
     <hr>
 
     <!-- list section -->
@@ -125,14 +128,14 @@
     <h3>@normal section</h3>
     <section>
         <h2>heading inside section</h2>
-        Text defining this section and many more things <br>
-        <a href="/">Primary Button</a>
+        <p> Text defining this section and many more things </p>
+        <a class="links primary-button"href="/">Primary Button</a>
     </section>
     <h3>@an off white section</h3>
     <section>
         <h2>inside off white section</h2>
-        Text defining this section and many more things <br>
-        <a href="/">Primary Button</a>
+        <p>Text defining this section and many more things </p> 
+        <a class="links primary-button"href="/">Primary Button</a>
     </section>
     <hr>
 
