--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <h3>Unordered lists</h3>
     <div>We don't want to show bullets in the unordered list. We'll remove that with CSS.</div>
-    <ul>
+    <ul class="un-bulleted-list">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
@@ -71,7 +71,7 @@
 
     <h3>Inline lists</h3>
     <div>Instead of going in a new row, we will create a list which will take columns. </div>
-    <ul>
+    <ul class="un-bulleted-list inline-lists">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
@@ -95,7 +95,7 @@
     Navigation is used on the top of the page and used to get to different pages
     <nav>
         <div>theBrandName</div>
-        <ul>
+        <ul class="un-bulleted-list">
             <li>
                 <a href="/">Home</a>
             </li>
@@ -145,7 +145,7 @@
         <h2>@footer</h2>
         <section>
             <h2>header inside footer</h2>
-            <ul>
+            <ul class="un-bulleted-list">
                 <li><a href="/">socialone</a> </li>
                 <li><a href="/">socialtwo</a> </li>
                 <li><a href="/">socialthree</a> </li>
