--- a/index.html
+++ b/index.html
@@ -92,20 +92,22 @@
     <!-- navigation bar -->
 
     <h2>@nav</h2>
-    Navigation is used on the top of the page and used to get to different pages
-    <nav>
-        <div>theBrandName</div>
-        <ul class="un-bulleted-list">
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/">Products</a>
-            </li>
-            <li>
-                <a href="/">About</a>
-            </li>
-        </ul>
+    <p>Navigation is used on the top of the page and used to get to different pages</p>
+    <nav class="navigation">
+        <div class="container">
+            <div class="brandName">theBrandName</div>
+            <ul class="un-bulleted-list inline-lists">
+                <li>
+                    <a class="links active" href="/">Home</a>
+                </li>
+                <li>
+                    <a class="links" href="/">Products</a>
+                </li>
+                <li>
+                    <a class="links" href="/">About</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <hr>
 
