--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <h2>@header</h2>
 
-    <header>
+    <header class="container hero">
         <img src="images/hero.svg" alt="hero-image">
         <h1>this is heading h1 inside header</h1>
     </header>
