style: section and footer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <h2>@typography</h2>
     <h1>The biggest heading h1</h1>
     <h2>The second biggest heading h2</h2>
-    <p> This is normal text. Long running text would look like this on your website. This will auto fold based on the width</p>
+    <p> This is normal text. Long running text would look like this on your website. This will auto fold based on the
+        width</p>
     <small>This is relatively smaller text</small>
     <hr>
 
@@ -58,7 +59,7 @@
     <hr>
 
     <!-- list section -->
-    
+
     <h2>@lists</h2>
 
     <h3>Unordered lists</h3>
@@ -128,29 +129,29 @@
     sections of features, team, pricing, contact info etc.
 
     <h3>@normal section</h3>
-    <section>
+    <section class="section">
         <h2>heading inside section</h2>
         <p> Text defining this section and many more things </p>
-        <a class="links primary-button"href="/">Primary Button</a>
+        <a class="links primary-button" href="/">Primary Button</a>
     </section>
     <h3>@an off white section</h3>
-    <section>
+    <section class="section off-white">
         <h2>inside off white section</h2>
-        <p>Text defining this section and many more things </p> 
-        <a class="links primary-button"href="/">Primary Button</a>
+        <p>Text defining this section and many more things </p>
+        <a class="links primary-button" href="/">Primary Button</a>
     </section>
     <hr>
 
     <!-- footer section  -->
 
-    <footer>
+    <footer class="footer">
         <h2>@footer</h2>
-        <section>
-            <h2>header inside footer</h2>
-            <ul class="un-bulleted-list">
-                <li><a href="/">socialone</a> </li>
-                <li><a href="/">socialtwo</a> </li>
-                <li><a href="/">socialthree</a> </li>
+        <section class="section container">
+            <h2 class="heading">header inside footer</h2>
+            <ul class="un-bulleted-list inline-lists ">
+                <li><a class="links" href="/">socialone</a> </li>
+                <li><a class="links" href="/">socialtwo</a> </li>
+                <li><a class="links" href="/">socialthree</a> </li>
             </ul>
         </section>
     </footer>
