--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <header class="container hero">
         <img src="images/hero.svg" alt="hero-image">
-        <h1>this is heading h1 inside header</h1>
+        <h1>Robin Hooda the <span class ="purple-heading">Web Developer</span></h1>
     </header>
     <hr>
 
@@ -146,7 +146,7 @@
 
     <footer class="footer">
         <h2>@footer</h2>
-        <section class="section container">
+        <section class="section">
             <h2 class="heading">header inside footer</h2>
             <ul class="un-bulleted-list inline-lists ">
                 <li><a class="links" href="/">socialone</a> </li>
