--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <h2>@header</h2>
 
     <header class="container hero">
-        <img src="images/hero.svg" alt="hero-image">
+        <img class="hero-img" src="images/hero.svg" alt="hero-image">
         <h1>Robin Hooda the <span class ="purple-heading">Web Developer</span></h1>
     </header>
     <hr>
