--- a/index.html
+++ b/index.html
@@ -118,27 +118,33 @@
 
     <header class="container hero">
         <img class="hero-img" src="images/hero.svg" alt="hero-image">
-        <h1>Robin Hooda the <span class ="purple-heading">Web Developer</span></h1>
+        <h1>Robin Hooda the <span class="purple-heading">Web Developer</span></h1>
     </header>
     <hr>
 
     <!-- About section  -->
 
     <h2>@Section</h2>
-    A section is used to separate parts of pages. In marketing websites you would have seen a header followed by
-    sections of features, team, pricing, contact info etc.
 
-    <h3>@normal section</h3>
     <section class="section">
-        <h2>heading inside section</h2>
-        <p> Text defining this section and many more things </p>
-        <a class="links primary-button" href="/">Primary Button</a>
+        <h2>white section</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+        </p>
     </section>
-    <h3>@an off white section</h3>
     <section class="section off-white">
-        <h2>inside off white section</h2>
-        <p>Text defining this section and many more things </p>
-        <a class="links primary-button" href="/">Primary Button</a>
+        <h2>off white section</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+        </p>
     </section>
     <hr>
 
